// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayManagementToolbar should render a disabled management toolbar 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
        <li class="dropdown nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link btn-unstyled" disabled="" type="button">
              <span class="navbar-breakpoint-down-d-none">Filter and Order
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom" focusable="false">
                  <title>caret-bottom</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#caret-bottom"></use>
                </svg>
              </span>
              <span class="navbar-breakpoint-d-none">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-filter" focusable="false">
                  <title>filter</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#filter"></use>
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li class="nav-item">
          <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" disabled="disabled" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow" focusable="false">
              <title>order-arrow</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#order-arrow"></use>
            </svg>
          </button>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" disabled="" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" disabled="disabled" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" disabled="disabled" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
        <li class="nav-item">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="info-circle-open" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open" focusable="false">
              <title>info-circle-open</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#info-circle-open"></use>
            </svg>
          </button>
        </li>
        <li class="dropdown nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link nav-link-monospaced btn-unstyled" type="button">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-list" focusable="false">
                <title>list</title>
                <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#list"></use>
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="inline-scroller">
      <ul class="list-unstyled">
        <li class="dropdown-item">
          <div class="custom-control custom-checkbox custom-control-inline">
            <label>
              <input class="custom-control-input" name="item1checkbox" value="1" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text">Item 1</span>
              </span>
            </label>
          </div>
        </li>
        <li class="dropdown-item">
          <div class="custom-control custom-checkbox custom-control-inline">
            <label>
              <input class="custom-control-input" name="item2checkbox" value="2" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text">Item 2</span>
              </span>
            </label>
          </div>
        </li>
      </ul>
    </div>
    <div class="dropdown-section">
      <button class="btn btn-block btn-primary" type="button">Done</button>
    </div>
  </form>
</div>
<div class="dropdown-menu dropdown-menu-indicator-start" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item active">
        <div class="dropdown-item-indicator">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-list" focusable="false">
            <title>list</title>
            <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#list"></use>
          </svg>
        </div>List</a>
    </li>
    <li>
      <a class=" dropdown-item disabled" href="javascript:;">
        <div class="dropdown-item-indicator">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-table" focusable="false">
            <title>table</title>
            <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#table"></use>
          </svg>
        </div>Table</a>
    </li>
    <li>
      <a class=" dropdown-item">
        <div class="dropdown-item-indicator">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-cards2" focusable="false">
            <title>cards2</title>
            <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#cards2"></use>
          </svg>
        </div>Card</a>
    </li>
  </ul>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with actions in active state 1`] = `
<div>
  <nav class="management-bar management-bar-primary navbar navbar-expand-md navbar-nowrap">
    <div class="container">
      <ul class="navbar-nav navbar-nav-expand">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input checked="" class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
        <li class="nav-item">
          <span class="navbar-text">1 of 10
            <span class="navbar-breakpoint-down-d-none">items selected</span>
          </span>
        </li>
        <li class="nav-item nav-item-shrink">
          <button class="btn nav-btn btn-link" type="button">Select all</button>
        </li>
      </ul>
      <ul class="navbar-nav">
        <li class="nav-item">
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false">
                <title>ellipsis-v</title>
                <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#ellipsis-v"></use>
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#editurl">Edit</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#deleteurl">Delete</a>
    </li>
  </ul>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with advanced search 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
                <div class="dropdown">
                  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-down" focusable="false">
                      <title>angle-down</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#angle-down"></use>
                    </svg>
                  </button>
                </div>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled"></ul>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with ascending sorting 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="nav-item">
          <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow" focusable="false">
              <title>order-arrow</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#order-arrow"></use>
            </svg>
          </button>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with classes 1`] = `
<div class="my-custom-class">
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with classes in active state 1`] = `
<div class="my-custom-class">
  <nav class="management-bar management-bar-primary navbar navbar-expand-md navbar-nowrap">
    <div class="container">
      <ul class="navbar-nav navbar-nav-expand">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input checked="" class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
        <li class="nav-item">
          <span class="navbar-text">1 of 10
            <span class="navbar-breakpoint-down-d-none">items selected</span>
          </span>
        </li>
        <li class="nav-item nav-item-shrink">
          <button class="btn nav-btn btn-link" type="button">Select all</button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with descending sorting 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="nav-item">
          <button class="btn nav-link nav-link-monospaced order-arrow-down-active btn-unstyled" aria-label="order-arrow" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow" focusable="false">
              <title>order-arrow</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#order-arrow"></use>
            </svg>
          </button>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items and no done button 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="dropdown nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link btn-unstyled" type="button">
              <span class="navbar-breakpoint-down-d-none">Filter and Order
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom" focusable="false">
                  <title>caret-bottom</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#caret-bottom"></use>
                </svg>
              </span>
              <span class="navbar-breakpoint-d-none">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-filter" focusable="false">
                  <title>filter</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#filter"></use>
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#myItem1">Item 1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#myItem2">Item 2</a>
    </li>
  </ul>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items of type checkbox 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="dropdown nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link btn-unstyled" type="button">
              <span class="navbar-breakpoint-down-d-none">Filter and Order
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom" focusable="false">
                  <title>caret-bottom</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#caret-bottom"></use>
                </svg>
              </span>
              <span class="navbar-breakpoint-d-none">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-filter" focusable="false">
                  <title>filter</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#filter"></use>
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="inline-scroller">
      <ul class="list-unstyled">
        <li class="dropdown-item">
          <div class="custom-control custom-checkbox custom-control-inline">
            <label>
              <input class="custom-control-input" name="item1checkbox" value="1" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text">Item 1</span>
              </span>
            </label>
          </div>
        </li>
        <li class="dropdown-item">
          <div class="custom-control custom-checkbox custom-control-inline">
            <label>
              <input class="custom-control-input" name="item2checkbox" value="2" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text">Item 2</span>
              </span>
            </label>
          </div>
        </li>
      </ul>
    </div>
    <div class="dropdown-section">
      <button class="btn btn-block btn-primary" type="button">Done</button>
    </div>
  </form>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items of type item 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="dropdown nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link btn-unstyled" type="button">
              <span class="navbar-breakpoint-down-d-none">Filter and Order
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom" focusable="false">
                  <title>caret-bottom</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#caret-bottom"></use>
                </svg>
              </span>
              <span class="navbar-breakpoint-d-none">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-filter" focusable="false">
                  <title>filter</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#filter"></use>
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="inline-scroller">
      <ul class="list-unstyled">
        <li>
          <a class=" dropdown-item" href="#myItem1">Item 1</a>
        </li>
        <li>
          <a class=" dropdown-item" href="#myItem2">Item 2</a>
        </li>
      </ul>
    </div>
    <div class="dropdown-section">
      <button class="btn btn-block btn-primary" type="button">Done</button>
    </div>
  </form>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items of type radio 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="dropdown nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link btn-unstyled" type="button">
              <span class="navbar-breakpoint-down-d-none">Filter and Order
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom" focusable="false">
                  <title>caret-bottom</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#caret-bottom"></use>
                </svg>
              </span>
              <span class="navbar-breakpoint-d-none">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-filter" focusable="false">
                  <title>filter</title>
                  <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#filter"></use>
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="inline-scroller">
      <ul class="list-unstyled">
        <li class="dropdown-subheader" role="presentation">Group 1</li>
        <li aria-label="Group 1" role="radiogroup">
          <ul class="list-unstyled">
            <li class="dropdown-item">
              <div class="custom-control custom-radio custom-control-inline">
                <label>
                  <input class="custom-control-input" value="1" ref="input" type="radio" role="radio">
                  <span class="custom-control-label">
                    <span class="custom-control-label-text">Item 1</span>
                  </span>
                </label>
              </div>
            </li>
            <li class="dropdown-item active">
              <div class="custom-control custom-radio custom-control-inline">
                <label>
                  <input checked="" class="custom-control-input" value="2" ref="input" type="radio" role="radio">
                  <span class="custom-control-label">
                    <span class="custom-control-label-text">Item 2</span>
                  </span>
                </label>
              </div>
            </li>
            <li class="dropdown-item">
              <div class="custom-control custom-radio custom-control-inline">
                <label>
                  <input disabled="disabled" class="custom-control-input" value="3" ref="input" type="radio" role="radio">
                  <span class="custom-control-label">
                    <span class="custom-control-label-text">Item 3</span>
                  </span>
                </label>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <div class="dropdown-section">
      <button class="btn btn-block btn-primary" type="button">Done</button>
    </div>
  </form>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with id 1`] = `
<div id="myId">
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with id in active state 1`] = `
<div id="myId">
  <nav class="management-bar management-bar-primary navbar navbar-expand-md navbar-nowrap">
    <div class="container">
      <ul class="navbar-nav navbar-nav-expand">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input checked="" class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
        <li class="nav-item">
          <span class="navbar-text">1 of 10
            <span class="navbar-breakpoint-down-d-none">items selected</span>
          </span>
        </li>
        <li class="nav-item nav-item-shrink">
          <button class="btn nav-btn btn-link" type="button">Select all</button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with info button 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="info-circle-open" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open" focusable="false">
              <title>info-circle-open</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#info-circle-open"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with info button in active state 1`] = `
<div>
  <nav class="management-bar management-bar-primary navbar navbar-expand-md navbar-nowrap">
    <div class="container">
      <ul class="navbar-nav navbar-nav-expand">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input checked="" class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
        <li class="nav-item">
          <span class="navbar-text">1 of 10
            <span class="navbar-breakpoint-down-d-none">items selected</span>
          </span>
        </li>
        <li class="nav-item nav-item-shrink">
          <button class="btn nav-btn btn-link" type="button">Select all</button>
        </li>
      </ul>
      <ul class="navbar-nav">
        <li class="nav-item">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="info-circle-open" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open" focusable="false">
              <title>info-circle-open</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#info-circle-open"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with no search 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav"></ul>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with plus button with more than one option 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
        <li class="nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none btn-primary" type="button">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
                <title>plus</title>
                <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#plus"></use>
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Add Content 1</a>
    </li>
    <li>
      <a class=" dropdown-item" href="#2">Add Content 2</a>
    </li>
  </ul>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with plus button with one option 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
        <li class="nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none btn-primary" type="button">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
                <title>plus</title>
                <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#plus"></use>
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item" href="#1">Add Content 1</a>
    </li>
  </ul>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with search action url 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form action="mySearchURL" role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with search form name 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form name="mySearchName" role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with search input name 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" name="mySearchName" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with search results bar 1`] = `
<div id="myId">
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text" value="foo">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
  <nav class="tbar subnav-tbar subnav-tbar-primary">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="tbar-nav">
        <li class="tbar-item tbar-item-expand">
          <div class="tbar-section">
            <span class="text-truncate-inline">
              <span class="text-truncate">10 results for
                <strong>foo</strong>
              </span>
            </span>
          </div>
        </li>
        <li class="tbar-item">
          <button class="btn component-link tbar-link btn-unstyled" type="button">Clear</button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with search results bar only when totalItems is greater than zero 1`] = `
<div id="myId">
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text" value="foo">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with search results bar when state is active 1`] = `
<div id="myId">
  <nav class="management-bar management-bar-primary navbar navbar-expand-md navbar-nowrap">
    <div class="container">
      <ul class="navbar-nav navbar-nav-expand">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input checked="" class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
        <li class="nav-item">
          <span class="navbar-text">1 of 10
            <span class="navbar-breakpoint-down-d-none">items selected</span>
          </span>
        </li>
        <li class="nav-item nav-item-shrink">
          <button class="btn nav-btn btn-link" type="button">Select all</button>
        </li>
      </ul>
    </div>
  </nav>
  <nav class="tbar subnav-tbar subnav-tbar-primary">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="tbar-nav">
        <li class="tbar-item tbar-item-expand">
          <div class="tbar-section">
            <span class="text-truncate-inline">
              <span class="text-truncate">10 results for
                <strong>foo</strong>
              </span>
            </span>
          </div>
        </li>
        <li class="tbar-item">
          <button class="btn component-link tbar-link btn-unstyled" disabled="disabled" type="button">Clear</button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with selection enabled 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
      </ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with state active 1`] = `
<div>
  <nav class="management-bar management-bar-primary navbar navbar-expand-md navbar-nowrap">
    <div class="container">
      <ul class="navbar-nav navbar-nav-expand">
        <li class="nav-item">
          <div class="custom-control custom-checkbox">
            <label>
              <input checked="" class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-label">
                <span class="custom-control-label-text sr-only">Select Page</span>
              </span>
            </label>
          </div>
        </li>
        <li class="nav-item">
          <span class="navbar-text">1 of 10
            <span class="navbar-breakpoint-down-d-none">items selected</span>
          </span>
        </li>
        <li class="nav-item nav-item-shrink">
          <button class="btn nav-btn btn-link" type="button">Select all</button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a management toolbar with view types 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
        <li class="dropdown nav-item">
          <div class="dropdown">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link nav-link-monospaced btn-unstyled" type="button">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-list" focusable="false">
                <title>list</title>
                <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#list"></use>
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
<div class="dropdown-menu dropdown-menu-indicator-start" ref="menu">
  <ul class="list-unstyled">
    <li>
      <a class=" dropdown-item active">
        <div class="dropdown-item-indicator">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-list" focusable="false">
            <title>list</title>
            <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#list"></use>
          </svg>
        </div>List</a>
    </li>
    <li>
      <a class=" dropdown-item disabled" href="javascript:;">
        <div class="dropdown-item-indicator">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-table" focusable="false">
            <title>table</title>
            <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#table"></use>
          </svg>
        </div>Table</a>
    </li>
    <li>
      <a class=" dropdown-item">
        <div class="dropdown-item-indicator">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-cards2" focusable="false">
            <title>cards2</title>
            <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#cards2"></use>
          </svg>
        </div>Card</a>
    </li>
  </ul>
</div>
`;

exports[`ClayManagementToolbar should render a managment toolbar with plus button 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
        <li class="nav-item">
          <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
              <title>plus</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#plus"></use>
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render a managment toolbar with plus link 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
        <div class="container-fluid container-fluid-max-xl">
          <form role="search">
            <div class="input-group">
              <div class="input-group-item">
                <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
                <span class="input-group-inset-item input-group-inset-item-after">
                  <button class="btn d-none btn-unstyled" aria-label="times" type="button">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
                      <title>times</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
                    </svg>
                  </button>
                  <button class="btn btn-unstyled" aria-label="search" type="submit">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                      <title>search</title>
                      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul class="navbar-nav">
        <li class="nav-item navbar-breakpoint-d-none">
          <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
              <title>search</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
            </svg>
          </button>
        </li>
        <li class="nav-item">
          <a aria-label="add" class="btn btn-primary nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none" href="#1">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
              <title>plus</title>
              <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#plus"></use>
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ClayManagementToolbar should render the default markup 1`] = `
<div>
  <nav class="management-bar management-bar-light navbar navbar-expand-md">
    <div class="container-fluid container-fluid-max-xl">
      <ul class="navbar-nav"></ul>
      <div class="navbar-form navbar-form-autofit">
        <form role="search">
          <div class="input-group">
            <div class="input-group-item">
              <input aria-label="Search" class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." ref="search" type="text">
              <span class="input-group-inset-item input-group-inset-item-after">
                <button class="btn btn-unstyled" aria-label="search" type="submit">
                  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search" focusable="false">
                    <title>search</title>
                    <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </form>
      </div>
      <ul class="navbar-nav"></ul>
    </div>
  </nav>
</div>
`;
